# local-ai-agents

./: .env.example  .gitignore  README.md  pyproject.toml
src/: config.py
src/api/: main.py
src/llm/: __init__.py  provider.py
src/tools/: __init__.py  base.py  calculator.py  python_repl.py  search.py
